# pfsense-port-forward-operator

./: .drone.yml  Dockerfile  README.md  k8s.yaml  oper.py  pyproject.toml
.github/workflows/: docker-image.yml
